프로필 사진 추가

--- a/tj2024b_web1/src/main/webapp/css/index.css
+++ b/tj2024b_web1/src/main/webapp/css/index.css
@@ -4,7 +4,7 @@
 .header_logo{
 	width : 50px;
 }
-
+/* font */
 @font-face {
      font-family: 'S-CoreDream-3Light';
      src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
@@ -13,4 +13,16 @@
 }
 *{
 	font-family:'S-CoreDream-3Light';
+}
+
+/* header member profile */
+.header_profile{
+    width: 70px; height: 70px; /* 가로사이즈 세로사이즈 = 고정 크기일때 사이즈 비율 깨짐. */
+    border-radius: 40px; /* 둥근모서리 */
+    padding: 2px ; /* 안쪽 여백 */
+    border : 1px solid #e8e8e8; /* 테두리 */
+    /* 사진의 사이즈 비율 맞춤 */
+    /* object-fit: contain; 자동 원본 비율 맞춤 */
+    /* object-fit: none;  사이즈 고정 */
+    object-fit: cover; /* 비율 유지 , 사이즈 잘림 */
 }
