회원제 포인트 추가

--- a/tj2024b_web1/src/main/webapp/css/info.css
+++ b/tj2024b_web1/src/main/webapp/css/info.css
@@ -10,3 +10,13 @@
 .mimgbox {
 	text-align: center;
 }
+
+.tableBox > table{
+	text-align: center;
+	margin: 0 auto;
+}
+.tableBox > h2{
+	text-align: center;
+	height: 80px;
+}
+
